--- a/androidAppDejakum/PPMApplication/bin/AndroidManifest.xml
+++ b/androidAppDejakum/PPMApplication/bin/AndroidManifest.xml
@@ -10,6 +10,13 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+	
+
+    
+    
 
     <uses-sdk
         android:minSdkVersion="14"
